--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
             ],
             "styles": [
               "node_modules/videogular2/fonts/videogular.css",
+              "node_modules/flatpickr/dist/flatpickr.css",
               "src/styles.scss"
             ],
             "scripts": [],
