--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^2.5.4",
     "flatpickr": "^4.6.3",
     "rxjs": "~6.3.3",
+    "screenfull": "^5.0.0",
     "tslib": "^1.9.0",
     "videogular2": "^7.0.1",
     "zone.js": "~0.8.26"
@@ -34,7 +35,7 @@
     "@angular/language-service": "~7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.10.54",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
