--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -2,7 +2,15 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
-    "types": []
+    "types": [
+        // add node as an option
+        "node"
+    ],
+    // typeRoots option has been previously configured
+    "typeRoots": [
+        // add path to @types
+        "node_modules/@types"
+    ]
   },
   "exclude": [
     "test.ts",
