--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^8.4.0",
+    "@ngrx/router-store": "^8.4.0",
     "@ngrx/store": "^8.4.0",
+    "@ngrx/store-devtools": "^8.4.0",
     "angularx-flatpickr": "^6.1.1",
     "core-js": "^2.5.4",
     "flatpickr": "^4.6.3",
